--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "author": "Tanner Langlinais",
   "dependencies": {
-    "@craco/craco": "^6.3.0",
+    "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/lab": "^5.0.0-alpha.53",
@@ -65,6 +65,7 @@
     "nodemon": "^2.0.14",
     "postcss": "^7.0.39",
     "prettier-eslint": "^13.0.0",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4"
